--- a/.github/workflows/build-passwall.yml
+++ b/.github/workflows/build-passwall.yml
@@ -12,108 +12,33 @@ on:
           - x86_64
           - aarch64_cortex-a53
           - aarch64_generic
-      iptables:
-        description: '启用 Iptables 透明代理'
-        required: false
-        default: 'true'
-        type: boolean
-      nftables:
-        description: '启用 Nftables 透明代理'
-        required: false
-        default: 'true'
-        type: boolean
-      geoview:
-        description: '包含 Geoview'
-        required: false
-        default: 'true'
-        type: boolean
-      haproxy:
-        description: '包含 Haproxy'
-        required: false
-        default: 'true'
-        type: boolean
-      hysteria:
-        description: '包含 Hysteria'
-        required: false
-        default: 'false'
-        type: boolean
-      naiveproxy:
-        description: '包含 NaiveProxy'
+      proxy_type:
+        description: '代理类型'
+        required: true
+        default: 'both'
+        type: choice
+        options:
+          - both
+          - iptables
+          - nftables
+          - none
+      core_selection:
+        description: '核心选择'
+        required: true
+        default: 'standard'
+        type: choice
+        options:
+          - standard
+          - full
+          - minimal
+          - custom
+      include_servers:
+        description: '包含服务端组件'
         required: false
         default: 'false'
         type: boolean
-      shadowsocks_libev_client:
-        description: '包含 Shadowsocks Libev 客户端'
-        required: false
-        default: 'true'
-        type: boolean
-      shadowsocks_libev_server:
-        description: '包含 Shadowsocks Libev 服务端'
-        required: false
-        default: 'true'
-        type: boolean
-      shadowsocks_rust_client:
-        description: '包含 Shadowsocks Rust 客户端'
-        required: false
-        default: 'true'
-        type: boolean
-      shadowsocks_rust_server:
-        description: '包含 Shadowsocks Rust 服务端'
-        required: false
-        default: 'false'
-        type: boolean
-      shadowsocksr_libev_client:
-        description: '包含 ShadowsocksR Libev 客户端'
-        required: false
-        default: 'true'
-        type: boolean
-      shadowsocksr_libev_server:
-        description: '包含 ShadowsocksR Libev 服务端'
-        required: false
-        default: 'false'
-        type: boolean
-      shadow_tls:
-        description: '包含 Shadow-TLS'
-        required: false
-        default: 'false'
-        type: boolean
-      simple_obfs:
-        description: '包含 Simple-Obfs'
-        required: false
-        default: 'true'
-        type: boolean
-      singbox:
-        description: '包含 SingBox'
-        required: false
-        default: 'true'
-        type: boolean
-      trojan_plus:
-        description: '包含 Trojan-Plus'
-        required: false
-        default: 'true'
-        type: boolean
-      tuic_client:
-        description: '包含 tuic-client'
-        required: false
-        default: 'false'
-        type: boolean
-      v2ray_geodata:
-        description: '包含 V2ray_Geodata'
-        required: false
-        default: 'false'
-        type: boolean
-      v2ray_plugin:
-        description: '包含 V2ray-Plugin'
-        required: false
-        default: 'true'
-        type: boolean
-      xray:
-        description: '包含 Xray'
-        required: false
-        default: 'true'
-        type: boolean
-      xray_plugin:
-        description: '包含 Xray-Plugin'
+      include_advanced:
+        description: '包含高级组件'
         required: false
         default: 'false'
         type: boolean
@@ -243,89 +168,55 @@ jobs:
           CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks=y
           EOF
           
-          # 添加用户选择的组件
-          if [ "${{ inputs.iptables }}" == "true" ]; then
+          # 添加代理类型配置
+          if [ "${{ inputs.proxy_type }}" == "both" ] || [ "${{ inputs.proxy_type }}" == "iptables" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y" >> .config
           fi
           
-          if [ "${{ inputs.nftables }}" == "true" ]; then
+          if [ "${{ inputs.proxy_type }}" == "both" ] || [ "${{ inputs.proxy_type }}" == "nftables" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y" >> .config
           fi
           
-          if [ "${{ inputs.geoview }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Geoview=y" >> .config
-          fi
-          
-          if [ "${{ inputs.haproxy }}" == "true" ]; then
+          # 根据核心选择添加组件
+          if [ "${{ inputs.core_selection }}" == "standard" ] || [ "${{ inputs.core_selection }}" == "full" ]; then
+            # 标准组件
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks=y" >> .config
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y" >> .config
-          fi
-          
-          if [ "${{ inputs.hysteria }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y" >> .config
-          fi
-          
-          if [ "${{ inputs.naiveproxy }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y" >> .config
-          fi
-          
-          if [ "${{ inputs.shadowsocks_libev_client }}" == "true" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y" >> .config
-          fi
-          
-          if [ "${{ inputs.shadowsocks_libev_server }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y" >> .config
-          fi
-          
-          if [ "${{ inputs.shadowsocks_rust_client }}" == "true" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y" >> .config
-          fi
-          
-          if [ "${{ inputs.shadowsocks_rust_server }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y" >> .config
-          fi
-          
-          if [ "${{ inputs.shadowsocksr_libev_client }}" == "true" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y" >> .config
-          fi
-          
-          if [ "${{ inputs.shadowsocksr_libev_server }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y" >> .config
-          fi
-          
-          if [ "${{ inputs.shadow_tls }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadow_TLS=y" >> .config
-          fi
-          
-          if [ "${{ inputs.simple_obfs }}" == "true" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y" >> .config
-          fi
-          
-          if [ "${{ inputs.singbox }}" == "true" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y" >> .config
-          fi
-          
-          if [ "${{ inputs.trojan_plus }}" == "true" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y" >> .config
-          fi
-          
-          if [ "${{ inputs.tuic_client }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y" >> .config
-          fi
-          
-          if [ "${{ inputs.v2ray_geodata }}" == "true" ]; then
-            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y" >> .config
-          fi
-          
-          if [ "${{ inputs.v2ray_plugin }}" == "true" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y" >> .config
-          fi
-          
-          if [ "${{ inputs.xray }}" == "true" ]; then
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y" >> .config
           fi
           
-          if [ "${{ inputs.xray_plugin }}" == "true" ]; then
+          if [ "${{ inputs.core_selection }}" == "full" ] || [ "${{ inputs.core_selection }}" == "custom" ] && [ "${{ inputs.include_advanced }}" == "true" ]; then
+            # 高级组件
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Geoview=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadow_TLS=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y" >> .config
             echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y" >> .config
+          fi
+          
+          if [ "${{ inputs.core_selection }}" == "minimal" ]; then
+            # 最小组件
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y" >> .config
+          fi
+          
+          # 服务端组件
+          if [ "${{ inputs.include_servers }}" == "true" ]; then
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y" >> .config
+            echo "CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y" >> .config
           fi
           
           # 添加一些必要的编译选项
@@ -516,10 +407,10 @@ jobs:
           echo "GitHub Actions运行ID: ${{ github.run_id }}" >> version.txt
           echo "提交SHA: ${{ github.sha }}" >> version.txt
           echo "构建选项:" >> version.txt
-          echo "- Iptables: ${{ inputs.iptables }}" >> version.txt
-          echo "- Nftables: ${{ inputs.nftables }}" >> version.txt
-          echo "- Xray: ${{ inputs.xray }}" >> version.txt
-          echo "- SingBox: ${{ inputs.singbox }}" >> version.txt
+          echo "- 代理类型: ${{ inputs.proxy_type }}" >> version.txt
+          echo "- 核心选择: ${{ inputs.core_selection }}" >> version.txt
+          echo "- 包含服务端组件: ${{ inputs.include_servers }}" >> version.txt
+          echo "- 包含高级组件: ${{ inputs.include_advanced }}" >> version.txt
           cp version.txt ./artifact/installer/
 
       - name: 上传IPK包
@@ -552,6 +443,12 @@ jobs:
             构建时间: $(date)
             目标架构: ${{ inputs.target_arch }}
             GitHub Actions运行ID: ${{ github.run_id }}
+            
+            ### 构建选项
+            - 代理类型: ${{ inputs.proxy_type }}
+            - 核心选择: ${{ inputs.core_selection }}
+            - 包含服务端组件: ${{ inputs.include_servers }}
+            - 包含高级组件: ${{ inputs.include_advanced }}
             
             ### 安装方法
             
